tests/fail/elaboration/implicit-args/unexpected-argument.fathom
//~ exit-code = 1

true @Bool
